--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "themes/AllinOne"]
- path = themes/AllinOne
- url="https://github.com/orianna-zzo/AllinOne"
+	path = themes/AllinOne
+	url = https://github.com/orianna-zzo/AllinOne
 # Checking
