--- a/config.toml
+++ b/config.toml
@@ -79,7 +79,7 @@ pygmentsuseclasses         = true
   # links
   email                    = "in.gaurav.mishra@email.com"
   github                   = "//github.com/mishragauravgm"
-  linkedin                 = "//https://www.linkedin.com/in/gauravmishra1234/"
+  linkedin                 = "//www.linkedin.com/in/gauravmishra1234/"
   instagram                = "//www.instagram.com/mishraa_gaurav"
   researchgate             ="//wwww"
   include_rss              = false                          # include RSS <link> tag in <head> and show RSS icon
