--- a/config.toml
+++ b/config.toml
@@ -94,7 +94,7 @@ pygmentsuseclasses         = true
   github                   = "//github.com/mishragauravgm"
   linkedin                 = "//www.linkedin.com/in/gauravmishra1234/"
   instagram                = "//www.instagram.com/mishraa_gaurav"
-  researchgate             ="//www.researchgate.com/Gaurav_Mishra52"
+  researchgate             ="//www.researchgate.net/Gaurav_Mishra52"
   include_rss              = false                          # include RSS <link> tag in <head> and show RSS icon
   
   # analytics
