--- a/config.toml
+++ b/config.toml
@@ -77,8 +77,8 @@ pygmentsuseclasses         = true
   avatar                   = "gaurav_dp2.jpeg"             # path to image in static dir e.g img/avatar.png 
   author                   = "Gaurav Mishra"
   description              = ["Deep Learning Enthusiast", "ECE Graduate.", "Hindustani Classical Vocalist."]           # appears in the site header when set to a non-empty string
-  welcome_head             = "Hello Visitor"
-  welcome_word             = "~Recent Posts~"
+  welcome_head             = "Gaurav Mishra"
+  welcome_word             = "Recent Posts"
 
   latestpostscount         = 2                             # how many posts to display on the home page
   bloggroupby              = 'month'
