--- a/config.toml
+++ b/config.toml
@@ -68,7 +68,7 @@ pygmentsuseclasses         = true
     name                   = "Credit Cards"
     weight                 = -80
     identifier             = "creditcard"
-    url                    = "creditcard/"  
+    url                    = "https://amzn.to/32H11Ta"  
 
 
 
